<resources>
    <string name="app_name">emp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sign">Sign-in</string>
    <string name="menu_temper">Temper</string>
    <string name="menu_request">Fund Request</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_finger">Sign In</string>
    <string name="menu_myrequest">My Request</string>
    <string name="menu_signout">SignOut</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>