<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/ic_baseline_follow_the_signs_24"
            android:title="@string/menu_sign" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:title="@string/menu_myrequest" />
        <item
            android:id="@+id/nav_myrequest"
            android:icon="@drawable/ic_baseline_device_hub_24"
            android:title="@string/menu_request" />

        <item
            android:id="@+id/nav_temper"
            android:icon="@drawable/ic_baseline_book_online_24"
            android:title="@string/menu_temper" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_signout" />
    </group>
</menu>