<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.emp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_request"
        android:name="com.example.emp.ui.Request.RequestFragment"
        android:label="@string/menu_request"
        tools:layout="@layout/fragment_request" />

    <fragment
        android:id="@+id/nav_myrequest"
        android:name="com.example.emp.ui.myRequest.myRequestFragment"
        android:label="@string/menu_myrequest"
        tools:layout="@layout/fragment_request"/>

    <fragment
        android:id="@+id/nav_tamper"
        android:name="com.example.emp.ui.tamper.TamperFragment"
        android:label="@string/menu_temper"
        tools:layout="@layout/fragment_tamper" />
</navigation>